--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,18 @@ language: node_js
 node_js:
   - "8.2.1"
 
-install:
-  - npm install newman
+# install:
+#   - npm install newman
 
 before_script:
-  - node --version
-  - npm --version
-  - node_modules/.bin/newman --version
+  # - node --version
+  # - npm --version
+  # - node_modules/.bin/newman --version
   - sudo apt-get update
   - sudo apt-get --allow-unauthenticated install openvpn
 script:
   # - node_modules/.bin/newman run BDS_microserviceAutom.json
-  - echo HOLA
+  - sudo openvpn
 # notifications:
 #   slack:
 #     rooms:
