--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_script:
   - sudo apt-get update
   - sudo apt-get --allow-unauthenticated install openvpn
 script:
+  - sudo openvpn --config HIT-UDP4-10195-config.ovpn $
   - node_modules/.bin/newman run https://www.getpostman.com/collections/a95e1f5726937d00ef43
-  #- sudo openvpn --config HIT-UDP4-10195-config.ovpn #--user Aduarte --http-proxy s p up
 # notifications:
 #   slack:
 #     rooms:
