--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - sudo apt-get update
   - sudo apt-get --allow-unauthenticated install openvpn
 script:
-  - sudo openvpn --config HIT-UDP4-10195-config.ovpn &>>openvpn-client.log &
+  - sudo openvpn --config HIT-UDP4-10195-config.ovpn &
   - sleep 10s
   - node_modules/.bin/newman run https://www.getpostman.com/collections/a95e1f5726937d00ef43
 # notifications:
