--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ before_script:
   - sudo apt-get update
   - sudo apt-get --allow-unauthenticated install openvpn
 script:
-  - travis_wait 20 sudo openvpn --config HIT-UDP4-10195-config.ovpn &
+  - sudo openvpn --config HIT-UDP4-10195-config.ovpn &
+  - travis_wait 30 sleep 10 &
   - node_modules/.bin/newman run https://www.getpostman.com/collections/a95e1f5726937d00ef43
 # notifications:
 #   slack:
