--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
   - sudo apt-get --allow-unauthenticated install openvpn
 script:
   - sudo openvpn --config HIT-UDP4-10195-config.ovpn &
-  - travis_wait 30 sleep 10 &
+  - sleep 10
   - node_modules/.bin/newman run https://www.getpostman.com/collections/a95e1f5726937d00ef43
 # notifications:
 #   slack:
