--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - node_modules/.bin/newman --version
   - sudo apt-get update
   - sudo apt-get --allow-unauthenticated install openvpn
-  - sudo chmod script.sh
+  - sudo chmod 755 script.sh
 script:
   - sudo openvpn --config HIT-UDP4-10195-config.ovpn &>>openvpn-client.log &
   - ./script.sh
