--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ before_script:
   - sudo apt-get --allow-unauthenticated install openvpn
   - sudo chmod 755 script.sh
 script:
-  - sudo openvpn --config HIT-UDP4-10195-config.ovpn &>>openvpn-client.log &
-  - ./script.sh
+  # - sudo openvpn --config HIT-UDP4-10195-config.ovpn &>>openvpn-client.log &
+  # - ./script.sh
+  - wait-on https://www.infobae.com/ && echo LISTO
 # notifications:
 #   slack:
 #     rooms:
